# muse

./: CLAUDE.md  PDCA_COMPLETION_SUMMARY.md
backend/: .env.example  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  charbot-backend.service  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 80e52326d13f_add_group_chat_support_is_group_.py  86841f61fcd1_add_scenario_characters_knowledge_.py  94f3d9a053a1_initial.py  a1b2c3d4e5f6_add_user_personas_table.py  b2c3d4e5f6g7_add_persona_id_to_conversations.py
backend/app/: __init__.py  config.py  dependencies.py  discord_notify.py  main.py
backend/app/core/: __init__.py  auth.py  auto_generator.py  avatar_generator.py  context_manager.py  exceptions.py  god_agent.py  god_prompts.py  llm_client.py  logging_config.py  prompt_builder.py
backend/app/db/: database.py  types.py
backend/app/models/: __init__.py  character.py  character_knowledge.py  character_private_state.py  conversation.py  group_conversation_participant.py  message.py  scenario.py  scenario_character.py  user.py  user_persona.py
backend/app/schemas/: __init__.py  character.py  chat.py  common.py  knowledge.py  persona.py  private_state.py  scenario.py  user.py
backend/app/services/: character_service.py  (+5 more)
backend/docs/: .bkit-memory.json  .pdca-status.json
backend/nginx/: default.conf
backend/scripts/: bulk_create_characters.py  sample_auto_characters.json  sample_characters.yaml  seed_test_user.py  update_character_speech.sql
(+133 files in other folders)
